# anthro-tables

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: code_mappings.py  converters.py  parser.py
tests/: test_converters.py  test_parser.py
